runs/idea001/design002/test_output/slurm_test_54933294.out
Loading conda version miniforge3-24.7.1
[test] Running train.py in runs/idea001/design002 with 2 train seqs, 1 val seq, for 2 epochs.
Device: cuda
Output: /work/pi_nwycoff_umass_edu/hang/auto/runs/idea001/design002/test_output
  Saved script snapshot → /work/pi_nwycoff_umass_edu/hang/auto/runs/idea001/design002/test_output/train_snapshot.py

Building data splits ...
  Loaded splits from /work/pi_nwycoff_umass_edu/hang/auto/splits_rome_tracking.json
  Sequences — train: 2, val: 1
  Frames  — train: 61, val: 33

Building sapiens_0.3b ...
[weights] pos_embed: 64x64 -> 40x24  (bicubic)
[weights] Loaded 293 / 297 backbone tensors
[weights] DepthProjector: zero-init (not loaded from checkpoint)
[weights] Head (81 tensors) randomly initialised
  Parameters: 308.8M

Starting training for 2 epochs ...

Epoch 1/2  lr_backbone=3.33e-06  lr_depth_proj=3.33e-05  lr_head=3.33e-05
Epoch 1 [train]:   0%|          | 0/16 [00:00<?, ?it/s]Epoch 1 [train]:   0%|          | 0/16 [00:00<?, ?it/s]
Traceback (most recent call last):
  File "<stdin>", line 17, in <module>
  File "/work/pi_nwycoff_umass_edu/hang/auto/runs/idea001/design002/train.py", line 907, in main
    train_m = train_one_epoch(model, train_loader, optimizer, scaler, device, epoch + 1, args,
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/work/pi_nwycoff_umass_edu/hang/auto/runs/idea001/design002/train.py", line 744, in train_one_epoch
    out    = model(x)
             ^^^^^^^^
  File "/work/pi_nwycoff_umass_edu/.conda/envs/hang/lib/python3.11/site-packages/torch/nn/modules/module.py", line 1739, in _wrapped_call_impl
    return self._call_impl(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/work/pi_nwycoff_umass_edu/.conda/envs/hang/lib/python3.11/site-packages/torch/nn/modules/module.py", line 1750, in _call_impl
    return forward_call(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/work/pi_nwycoff_umass_edu/hang/auto/runs/idea001/design002/train.py", line 645, in forward
    feat = self.backbone(rgb, depth)
           ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/work/pi_nwycoff_umass_edu/.conda/envs/hang/lib/python3.11/site-packages/torch/nn/modules/module.py", line 1739, in _wrapped_call_impl
    return self._call_impl(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/work/pi_nwycoff_umass_edu/.conda/envs/hang/lib/python3.11/site-packages/torch/nn/modules/module.py", line 1750, in _call_impl
    return forward_call(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/work/pi_nwycoff_umass_edu/hang/auto/runs/idea001/design002/train.py", line 484, in forward
    x = x + self.vit.pos_embed                 # add positional embedding
        ~~^~~~~~~~~~~~~~~~~~~~
TypeError: can only concatenate tuple (not "Parameter") to tuple
[test] Finished.
